# argueflow

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  models.dvc  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.dvc/: config
.github/workflows/: deploy-docs.yml  pre-commit.yml  run-pytest.yml
_modules/: data_preparation.html  dataset.html  index.html  model.html  pseudo_labeling.html  train.html  utils.html
_modules/argueflow/data/: argue_module.html  data_preparation.html  discourse_formatter.html  essay_loader.html  tokenized_dataset.html
_modules/argueflow/eval/: eval.html
_modules/argueflow/infer/: infer.html
_modules/argueflow/models/: fp2_base_model.html
_modules/argueflow/train/: train.html
_modules/argueflow/utils/: dvc_utils.html  logging_utils.html  tokenizer.html
_sources/: modules.rst.txt
argueflow/: data_preparation.py  dataset.py  infer.py  model.py  pseudo_labeling.py  train.py  utils.py
argueflow/cli/: __init__.py  __main__.py  commands.py
argueflow/data/: argue_module.py  data_preparation.py  discourse_formatter.py  essay_loader.py  tokenized_dataset.py
argueflow/eval/: eval.py
argueflow/infer/: infer.py
argueflow/models/: fp2_base_model.py  fp2_lightning_module.py
argueflow/train/: train.py
argueflow/utils/: dvc_utils.py  logging_utils.py  tokenizer.py
configs/: config.yaml  config_schema.py
configs/data/: default_paths.yaml
configs/data_loading/: default_paths.yaml
configs/infer/: checkpoint_path.yaml
configs/logger/: csv.yaml  csv_logger.yaml  mlflow_logger.yaml
configs/logging/: default.yaml
configs/model/: deberta.yaml  distilbert.yaml
configs/train/: default.yaml
configs/trainer/: default.yaml
configs/training/: default.yaml
data/: processed.dvc  raw.dvc
docs/: conf.py  index.rst  modules.rst
models/: .gitignore  best_model.ckpt.dvc  epoch=6-step=413.ckpt.dvc
tests/: test_cli.py  test_download_data.py
