[project]
name = "argueflow"
version = "0.1.0"
description = "An MLOps pipeline for argument classification, based on the Kaggle Feedback Prize"
authors = [{ name = "Vladimir Smirnov", email = "voff.smirnoff@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "datasets==3.5.0",
    "dvc[gdrive]==3.59.2",
    "pandas==2.2.3",
    "pytorch-lightning==2.5.0.post0",
    "torch==2.6.0",
    "transformers==4.49.0"
]

[tool.setuptools]
packages = ["argueflow"]

[project.optional-dependencies]
dev = [
    "dvc==3.59.2",
    "dvc-data==3.16.10",
    "dvc-gdrive==3.0.1",
    "dvc-http==2.32.0",
    "dvc-objects==5.1.0",
    "dvc-render==1.0.2",
    "dvc-studio-client==0.21.0",
    "dvc-task==0.40.2",
    "fire==0.7.0",
    "hydra-core==1.3.2",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "ipywidgets==8.1.6",
    "pre-commit==4.1.0",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
]
docs = [
    "autodocsumm==0.2.14",
    "furo==2024.8.6",
    "myst-nb==1.2.0",
    "sphinx==8.2.1",
    "sphinx-autodoc-typehints==3.1.0",
    "sphinx-rtd-theme==3.0.2"
]

[tool.black]
line-length = 90
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = 90

[tool.flake8]
max-line-length = 90
ignore = ["E203", "E501", "W503", "B950"]
max-complexity = 12
select = ["B", "C", "E", "F", "W", "B9"]
per-file-ignores = [
    "**/__init__.py: F401",   # for easier imports to __init__ without __all__
    "types.py: F401"          # file to define custom types
]
count = true

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[project.scripts]
argueflow = "argueflow.cli.commands:main"

[tool.uv]
package = true
